--- a/package.json
+++ b/package.json
@@ -1,17 +1,37 @@
 {
   "name": "mqtt-server",
   "version": "1.0.0",
-  "main": "index.js",
+  "description": "MQTT-based UCI Configuration Management System",
+  "main": "src/server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "setup": "node setup.js",
+    "start": "node src/server.js",
+    "dev": "nodemon src/server.js",
+    "test": "jest"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
   "dependencies": {
-    "aedes": "^0.51.3",
-    "mqtt": "^5.13.0",
-    "net": "^1.0.2"
-  }
+    "aedes": "^0.50.0",
+    "chokidar": "^3.5.3",
+    "cors": "^2.8.5",
+    "dotenv": "^16.6.1",
+    "express": "^4.18.2",
+    "fs-extra": "^11.1.1",
+    "joi": "^17.9.2",
+    "mqtt": "^5.0.0",
+    "uuid": "^9.0.0",
+    "winston": "^3.10.0",
+    "ws": "^8.14.2"
+  },
+  "devDependencies": {
+    "jest": "^29.6.1",
+    "nodemon": "^3.0.1"
+  },
+  "keywords": [
+    "mqtt",
+    "uci",
+    "configuration",
+    "iot"
+  ],
+  "author": "Haorong",
+  "license": "MIT"
 }
