🥊 1. use prettier for the project 2.set default setting from default.js

--- a/.env
+++ b/.env
@@ -8,8 +8,14 @@ MQTT_PORT=1883
 MQTT_WS_PORT=8883
 MQTT_CLIENT_TIMEOUT=10000
 
+# MQTT Authentication & Security - TEMPORARILY DISABLED
+MQTT_ENABLE_AUTH=false
+MQTT_USERS_FILE=./mqtt_users.json
+MQTT_ACL_FILE=./mqtt_acl.json
+
 # Web Server Configuration
-WEB_PORT=3001
+WEB_PORT=3000
+WEB_HOST=0.0.0.0
 CORS_ORIGIN=*
 
 # UCI Configuration
