--- a/supervisord.conf
+++ b/supervisord.conf
@@ -1,21 +1,13 @@
 [supervisord]
 nodaemon=true
+logfile=/app/logs/supervisord.log
+pidfile=/app/supervisord.pid
 user=root
-logfile=/var/log/supervisor/supervisord.log
-pidfile=/var/run/supervisord.pid
 
-[program:mosquitto]
-command=mosquitto -c /etc/mosquitto/mosquitto.conf
-autostart=true
-autorestart=true
-stderr_logfile=/var/log/supervisor/mosquitto.err.log
-stdout_logfile=/var/log/supervisor/mosquitto.out.log
-
-[program:uci-server]
+[program:nodeapp]
 command=node src/server.js
 directory=/app
-autostart=true
+stdout_logfile=/app/logs/nodeapp.log
+stderr_logfile=/app/logs/nodeapp_error.log
 autorestart=true
-stderr_logfile=/var/log/supervisor/uci-server.err.log
-stdout_logfile=/var/log/supervisor/uci-server.out.log
-environment=NODE_ENV=production,LOG_LEVEL=info
+environment=NODE_ENV=development
