--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,42 +1,15 @@
-version: '3.8'
-
 services:
-  uci-server:
+  mqtt-server:
     build: .
+    container_name: mqtt-server-container
+    env_file:
+      - .env
     ports:
-      - "1883:1883"  # MQTT
-      - "3000:3000"  # HTTP API
+      - "1883:1883"    # MQTT
+      - "8883:8883"    # MQTT WebSocket  
+      - "3001:3001"    # Web server
     volumes:
+      - ./logs:/app/logs
       - ./uci:/app/uci
       - ./uci_backup:/app/uci_backup
-      - ./logs:/app/logs
-    environment:
-      - NODE_ENV=production
-      - LOG_LEVEL=info
-      - MQTT_PORT=1883
-      - WEB_PORT=3000
-      - UCI_DIR=/app/uci
-      - BACKUP_DIR=/app/uci_backup
     restart: unless-stopped
-    healthcheck:
-      test: ["CMD", "wget", "--quiet", "--tries=1", "--spider", "http://localhost:3000/health"]
-      interval: 30s
-      timeout: 10s
-      retries: 3
-      start_period: 40s
-
-  # Optional: Separate MQTT broker
-  # mosquitto:
-  #   image: eclipse-mosquitto:2
-  #   ports:
-  #     - "1883:1883"
-  #     - "9001:9001"
-  #   volumes:
-  #     - ./mosquitto.conf:/mosquitto/config/mosquitto.conf
-  #     - mosquitto_data:/mosquitto/data
-  #     - mosquitto_logs:/mosquitto/log
-  #   restart: unless-stopped
-
-volumes:
-  mosquitto_data:
-  mosquitto_logs:
