--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "aedes": "^0.50.0",
+    "chalk": "^4.1.2",
     "chokidar": "^3.5.3",
     "cors": "^2.8.5",
     "dotenv": "^16.6.1",
