🔖Automated CI/CD: Every push triggers comprehensive testing

--- a/package.json
+++ b/package.json
@@ -7,7 +7,23 @@
     "setup": "node setup.js",
     "start": "node src/server.js",
     "dev": "nodemon src/server.js",
-    "test": "jest"
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
+    "lint": "eslint src/ --ext .js",
+    "lint:fix": "eslint src/ --ext .js --fix",
+    "format": "prettier --write src/**/*.js",
+    "format:check": "prettier --check src/**/*.js",
+    "typecheck": "echo 'No TypeScript configured'",
+    "security-check": "npm audit --audit-level=moderate",
+    "build": "echo 'No build step required for Node.js app'",
+    "clean": "rm -rf logs/* && rm -rf uci_backup/*",
+    "docker:build": "docker build -t mqtt-server .",
+    "docker:run": "docker run -p 1883:1883 -p 3001:3001 -p 8883:8883 mqtt-server",
+    "docker:compose": "docker-compose up -d",
+    "docker:stop": "docker-compose down",
+    "docker:logs": "docker-compose logs -f",
+    "health-check": "curl -f http://localhost:3001/health || exit 1"
   },
   "dependencies": {
     "aedes": "^0.50.0",
@@ -24,8 +40,10 @@
     "ws": "^8.14.2"
   },
   "devDependencies": {
+    "eslint": "^8.57.0",
     "jest": "^29.6.1",
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.1",
+    "prettier": "^3.2.5"
   },
   "keywords": [
     "mqtt",
