✅ support ws for mqtt server

--- a/.env
+++ b/.env
@@ -9,7 +9,7 @@ MQTT_WS_PORT=8883
 MQTT_CLIENT_TIMEOUT=10000
 
 # MQTT Authentication & Security - TEMPORARILY DISABLED
-MQTT_ENABLE_AUTH=false
+MQTT_ENABLE_AUTH=true
 MQTT_USERS_FILE=./mqtt_users.json
 MQTT_ACL_FILE=./mqtt_acl.json
 
