🔖 1. update README 2.update docker settings 3. update .env example

--- a/.env
+++ b/.env
@@ -1,28 +1,13 @@
-# Server Configuration
-NODE_ENV=development
-LOG_LEVEL=debug
-
-# MQTT Configuration
-MQTT_HOST=0.0.0.0
+# MQTT Server Configuration
 MQTT_PORT=1883
 MQTT_WS_PORT=8883
-MQTT_CLIENT_TIMEOUT=10000
-
-# MQTT Authentication & Security - TEMPORARILY DISABLED
-MQTT_ENABLE_AUTH=true
-MQTT_USERS_FILE=./mqtt_users.json
-MQTT_ACL_FILE=./mqtt_acl.json
-
-# Web Server Configuration
 WEB_PORT=3001
-WEB_HOST=0.0.0.0
-CORS_ORIGIN=*
-
-# UCI Configuration
-UCI_DIR=./uci
-BACKUP_DIR=./uci_backup
-UUID_MAPPING_FILE=./uci_uuid_mapping.json
-WRITE_UUIDS_TO_FILES=true
+NODE_ENV=production
 
 # Logging
-LOG_DIR=./logs
+LOG_LEVEL=info
+LOG_FILE=./logs/mqtt-server.log
+
+# UCI Configuration
+UCI_BACKUP_DIR=./uci_backup
+UCI_WATCH_INTERVAL=1000
